@@ -18,6 +18,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
+import os
 from winui import ui
 from installation_finish_page import InstallationFinishPage
 from installation_page import InstallationPage
@@ -41,6 +42,7 @@ class WindowsFrontend(ui.Frontend):
         self.application = application
         self.current_page = None
         kargs["text"] = self.application.info.application_name
+        kargs["icon"] = self.application.info.application_icon
         ui.Frontend.__init__(self, *args, **kargs)
 
     def cancel(self, confirm=False):
