@@ -230,4 +230,7 @@ wubi (9.04) UNRELEASED; urgency=low
     Ubuntu Linux.
   * Removed an erroneous closing parentheses in the use_cd check.
 
- -- Agostino Russo <agostino.russo@gmail.com>  Sun, 05 Apr 2009 03:13:55 +0100
+  [ Agostino Russo ]
+  * Set the application icon (LP: #341631)
+
+ -- Agostino Russo <agostino.russo@gmail.com>  Mon, 06 Apr 2009 00:42:18 +0100
